force-app/main/default/objects/Demand__c/Demand__c.object-meta.xml
<CustomObject>
    <label>Demand</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Demand Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>