force-app/main/default/objects/Demand__c/fields/Agreement_Value_Paid__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Agreement Value Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>