force-app/main/default/objects/Demand__c/fields/Demand_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Approval_Status__c</fullName>
    <label>Demand Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for approval</fullName>
                <default>true</default>
                <label>Pending for approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>