force-app/main/default/objects/Demand__c/fields/Demand_Comment__c.field-meta.xml
<CustomField>
    <fullName>Demand_Comment__c</fullName>
    <label>Demand  Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>