force-app/main/default/objects/Demand__c/fields/Demand_Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Demand_Comment_History__c</fullName>
    <label>Demand Comment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>