force-app/main/default/objects/Demand__c/fields/Demand_Letter__c.field-meta.xml
<CustomField>
    <fullName>Demand_Letter__c</fullName>
    <formula>HYPERLINK(&quot;/apex/SendDemandLetterPage?dId=&quot;+ Id +&quot;&quot;,&quot; SendDemand&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Letter</label>
    <type>Text</type>
</CustomField>