force-app/main/default/objects/Demand__c/fields/Demand_Letter_Sent_on__c.field-meta.xml
<CustomField>
    <fullName>Demand_Letter_Sent_on__c</fullName>
    <label>Demand Letter Sent on</label>
    <type>Date</type>
</CustomField>