force-app/main/default/objects/Demand__c/fields/Demand_Next_Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Next_Followup_Date__c</fullName>
    <label>Demand Next Followup Date</label>
    <type>DateTime</type>
</CustomField>