force-app/main/default/objects/Demand__c/fields/Demand_Stage__c.field-meta.xml
<CustomField>
    <fullName>Demand_Stage__c</fullName>
    <label>Demand Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Follow-up</fullName>
            </value>
            <value>
                <fullName>Collection Completed</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>