force-app/main/default/objects/Demand__c/fields/Demand_Type__c.field-meta.xml
<CustomField>
    <fullName>Demand_Type__c</fullName>
    <label>Demand Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Cost</fullName>
            </value>
            <value>
                <fullName>Debit Note</fullName>
            </value>
            <value>
                <fullName>Other Charge</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>