force-app/main/default/objects/Demand__c/fields/Email_1_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_1_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email 1 Sent</label>
    <type>Checkbox</type>
</CustomField>