force-app/main/default/objects/Demand__c/fields/Email_2_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_2_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email 2 Sent</label>
    <type>Checkbox</type>
</CustomField>