force-app/main/default/objects/Demand__c/fields/Email_3_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_3_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email 3 Sent</label>
    <type>Checkbox</type>
</CustomField>