force-app/main/default/objects/Demand__c/fields/Interest_Calculated_Till__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculated_Till__c</fullName>
    <label>Interest Calculated Till</label>
    <type>Date</type>
</CustomField>