force-app/main/default/objects/Demand__c/fields/Interest_Waive_Off_status__c.field-meta.xml
<CustomField>
    <fullName>Interest_Waive_Off_status__c</fullName>
    <label>Interest Waive-Off status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>