force-app/main/default/objects/Demand__c/fields/Is_Checked__c.field-meta.xml
<CustomField>
    <fullName>Is_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Checked</label>
    <type>Checkbox</type>
</CustomField>