force-app/main/default/objects/Demand__c/fields/Is_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>Is_Downloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Downloaded</label>
    <type>Checkbox</type>
</CustomField>