force-app/main/default/objects/Demand__c/fields/Is_Possession_Demand__c.field-meta.xml
<CustomField>
    <fullName>Is_Possession_Demand__c</fullName>
    <formula>Payment_Milestone__r.Is_Possession_Milestone__c</formula>
    <label>Is Possession Demand</label>
    <type>Checkbox</type>
</CustomField>