force-app/main/default/objects/Demand__c/fields/Last_Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent_Date__c</fullName>
    <label>Last Reminder Sent Date</label>
    <type>Date</type>
</CustomField>