force-app/main/default/objects/Demand__c/fields/Next_Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Reminder_Sent_Date__c</fullName>
    <formula>IF(
   AND(ISBLANK(Due_Date__c), ISBLANK(Last_Reminder_Sent_Date__c)),
   NULL,
   IF(
       ISBLANK(Last_Reminder_Sent_Date__c),
       Due_Date__c + 1,
       Last_Reminder_Sent_Date__c + 7
   )
)</formula>
    <label>Next Reminder Sent Date</label>
    <type>Date</type>
</CustomField>