force-app/main/default/objects/Demand__c/fields/Other_Charges_Paid__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Charges Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>