force-app/main/default/objects/Demand__c/fields/Other_Charges_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Remaining__c</fullName>
    <formula>Other_Charges_Demanded__c - Other_Charges_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Charges Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>