force-app/main/default/objects/Demand__c/fields/Payment_Delay_by__c.field-meta.xml
<CustomField>
    <fullName>Payment_Delay_by__c</fullName>
    <formula>If(Today()&gt; Due_Date__c,Today() - Due_Date__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Delay by</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>