force-app/main/default/objects/Demand__c/fields/Payment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Milestone</label>
    <referenceTo>Payment_Milestone__c</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>