force-app/main/default/objects/Demand__c/fields/Pre_Interest_Waive_off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pre_Interest_Waive_off_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pre Interest Waive-off Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>