force-app/main/default/objects/Demand__c/fields/Previous_Mail_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Mail_Sent_Date__c</fullName>
    <label>Previous Mail Sent Date</label>
    <type>Date</type>
</CustomField>