force-app/main/default/objects/Demand__c/fields/PublicLink__c.field-meta.xml
<CustomField>
    <fullName>PublicLink__c</fullName>
    <label>PublicLink</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>