force-app/main/default/objects/Demand__c/fields/PublicLink_Created__c.field-meta.xml
<CustomField>
    <fullName>PublicLink_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PublicLink Created</label>
    <type>Checkbox</type>
</CustomField>