force-app/main/default/objects/Demand__c/fields/Reverse_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Remarks__c</fullName>
    <label>Reverse Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>