force-app/main/default/objects/Demand__c/fields/Send_Demand_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_Demand_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It Is Used To Send Demand Letter Manually.</inlineHelpText>
    <label>Send Demand Letter</label>
    <type>Checkbox</type>
</CustomField>