force-app/main/default/objects/Demand__c/fields/Send_Demand_Mail__c.field-meta.xml
<CustomField>
    <fullName>Send_Demand_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It Is Used To Send Demand Mail Through Automation.</inlineHelpText>
    <label>Send Demand Mail</label>
    <type>Checkbox</type>
</CustomField>