force-app/main/default/objects/Demand__c/fields/Send_Reminder_Letter_1__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_Letter_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Reminder Letter 1</label>
    <type>Checkbox</type>
</CustomField>