force-app/main/default/objects/Demand__c/fields/Send_Reminder_Letter_3__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_Letter_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is a Final Reminder.</inlineHelpText>
    <label>Send Reminder Letter 3</label>
    <type>Checkbox</type>
</CustomField>