force-app/main/default/objects/Demand__c/fields/Send_Reminder_Letter_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_Letter_3_Date__c</fullName>
    <label>Send Reminder Letter 3 Date</label>
    <type>Date</type>
</CustomField>