force-app/main/default/objects/Demand__c/fields/TDS_Value_Demanded__c.field-meta.xml
<CustomField>
    <fullName>TDS_Value_Demanded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDS Value Demanded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>