force-app/main/default/objects/Demand__c/fields/TDS_Value_Remaining__c.field-meta.xml
<CustomField>
    <fullName>TDS_Value_Remaining__c</fullName>
    <formula>TDS_Value_Demanded__c - TDS_Value_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TDS Value Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>