force-app/main/default/objects/Demand__c/fields/Total_GST_On_Interest_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_On_Interest_Amount_Remaining__c</fullName>
    <formula>Total_Tax_On_Interest_Amount__c - Total_Tax_On_Interest_Amount_Paid__c - Total_Tax_On_Interest_Amount_Waived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST On Interest Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>