force-app/main/default/objects/Demand__c/fields/Total_Interest_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount_Remaining__c</fullName>
    <formula>Total_Interest_Amount__c - Total_Interest_Amount_Paid__c - Total_Interest_Amount_Waived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>