force-app/main/default/objects/Demand__c/fields/Total_Tax_On_Interest_Amount_Waived__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_On_Interest_Amount_Waived__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Tax On Interest Amount Waived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>