force-app/main/default/objects/Demand__c/fields/Total_Tax_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Remaining__c</fullName>
    <formula>Total_Tax_Demanded__c - Total_Tax_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>