force-app/main/default/objects/Demand__c/fields/Tower_ID__c.field-meta.xml
<CustomField>
    <fullName>Tower_ID__c</fullName>
    <formula>Booking__r.Tower__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower ID</label>
    <type>Text</type>
</CustomField>